--- a/align.css
+++ b/align.css
@@ -2,17 +2,14 @@ body{
 	margin: 0;
 	padding: 0;
 }
-.box-center{
-	box-sizing: border-box;
-	background-color: blue;
-	border: 1px solid green;
+div{
+	border: 1px solid orange;
+	/*padding: 5px;*/
+
+}
+.box-align {
+	background-color: lightgreen;
 	width:60%;
 	margin: auto;
 	text-align: center;
-	height:400px;
-	padding: 2.5px;
-
-	line-height: 400px;
-	height:400px;
-
 }
